[kit] fix 2x list alignment

--- a/bin/hidekit.less
+++ b/bin/hidekit.less
@@ -177,7 +177,6 @@ kit-root {
 
 			max-height: 400px;
 			overflow: auto;
-			margin-right: 2px;
 
 			&::-webkit-scrollbar {
 				width: 7px;
